super-mid.kube.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: super-mid-deploy
  namespace: staging
spec:
  selector:
    matchLabels:
      app: super-mid
  replicas: 1
  template:
    metadata:
      labels:
        app: super-mid
    spec:
      nodeSelector:
        workfor: biz
      containers:
        - name: super-mid
          image: harbor_url_prod_openmmlab/public/super-mid:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 1
              memory: 3000Mi
      imagePullSecrets:
        - name: harbor-registry-key
      securityContext:
        runAsUser: 0
---
apiVersion: v1
kind: Service
metadata:
  name: super-mid-svc
  namespace: staging
spec:
  type: ClusterIP
  selector:
    app: super-mid
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
#apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: super-mid-ingress
  namespace: staging
spec:
  rules:
    - host: super-mid.staging.openxlab.org.cn
      http:
        paths:
          - backend:
              service:
                name: super-mid-svc
                port:
                  number: 8080
            path: /
            pathType: Prefix
